k8s/celery-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-celery-worker-deployment
  namespace: default
  labels:
    app: django-celery-worker
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: django-celery-worker
  template:
    metadata:
      labels:
        app: django-celery-worker
    spec:
      terminationGracePeriodSeconds: 86400
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      containers:
        - name: django-celery-worker-docker-image
          image: greentropikal/django-webapp:VERSION
          command: [ "/bin/sh","-c" ]
          args: [celery -A django_celery worker -l info ]
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "500M"
            limits:
              cpu: "500m"
              memory: "1000M"
