k8s/celery-flower.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-celery-flower-deployment
  namespace: default
  labels:
    app: django-celery-flower
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: django-celery-flower
  template:
    metadata:
      labels:
        app: django-celery-flower
    spec:
      terminationGracePeriodSeconds: 3800
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      containers:
        - name: django-celery-flower-image
          image: mher/flower:latest
          command: [ "/bin/sh","-c" ]
          args: [celery flower  -A core ]
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "100M"
            limits:
              cpu: "150m"
              memory: "200M"
          ports:
            - containerPort: 5555
          readinessProbe:
            httpGet:
              path: /
              port: 5555
            initialDelaySeconds: 30
            periodSeconds: 20
          livenessProbe:
            httpGet:
              path: /
              port: 5555
            initialDelaySeconds: 15
            periodSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  name: django-celery-flower-load-balancer
spec:
  type: NodePort
  selector:
    app: django-celery-flower
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 5555
      nodePort: 31001
