k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
      annotations:
        cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
    spec:
      terminationGracePeriodSeconds: 300
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      containers:
        - name: webapp-docker-image
          image: greentropikal/django-webapp:VERSION
    #       command: ["/bin/sh", "-c", "python manage.py migrate && python3 manage.py runserver 0.0.0.0:8000"]
    # #["python","./manage.py", "runserver", "0.0.0.0:8000"]
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "250m"
              memory: "100M"
            limits:
              cpu: "500m"
              memory: "1000M"
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 120
---
apiVersion: v1
kind: Service
metadata:
  name: django-cluster-ip-service
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 31000
