k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops_challenge-app-service
  labels:
    app: devops_challenge-app
spec:
  type: NodePort
  ports:
      - port: 8080
  selector:
   app: devops_challenge-app
